<resources>
    <string name="app_name">Laskin</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="euro_text">Euro</string>
    <string name="input_hint">Amount to convert</string>
    <string name="calculate_btn_text">Calculate</string>
    <string name="action_list_name">List</string>
    <string name="amountText">Amount</string>
    <string name="testText">Test</string>
    <string name="lower_calc_text">None</string>
    <string name="action_update">Update Currencies</string>
    <string name="title_activity_add_currency">AddCurrency</string>
    <string name="currency_name">Currency name</string>
    <string name="relation_text">Relation</string>
    <string name="date_of_input">Date of input</string>
    <string name="add_btn_text">Add</string>
    <string name="add_currency_text">Add currency</string>
    <string name="change_text">Change</string>
    <string name="none_text">None</string>
    <string name="action_search">Search</string>
</resources>
