<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.laskin.MainActivity">
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/action_list_name"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:title="@string/add_currency_text" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
