<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCalcuator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CalculatorFragment">

    <TextView
        android:id="@+id/upperCurrTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/euro_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/upperInput"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/amountText"
        android:inputType="numberDecimal"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/lowerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lower_calc_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <EditText
        android:id="@+id/lowerInput"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/amountText"
        android:inputType="numberDecimal"
        tools:targetApi="o" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_btn_text" />

    <Button
        android:id="@+id/testButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="test"
        android:text="@string/testText" />
</LinearLayout>