<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="28dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddCurrencyActivity"
    tools:showIn="@layout/activity_add_currency">

    <TextView
        android:id="@+id/currencyNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/currencyNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/currency_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/currencyRelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relation_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/relationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/relation_text"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_input"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/date_of_input"
        android:importantForAutofill="no"
        android:inputType="date"
        tools:targetApi="o" />

    <Button
        android:id="@+id/addButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:onClick="addCurrency"
        android:text="@string/add_btn_text" />
</LinearLayout>